# foundation_model

./: main.py  mlflow.db
docs/: EXECUTION_FLOW.md
engine/: __init__.py  lp_engine.py  (+3 more)
utils/drnoon-image-transform/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py
utils/drnoon-image-transform/.github/: CODEOWNERS  pull_request_template.md
utils/drnoon-image-transform/.github/workflows/: lint.yml  release.yml  test.yml
utils/drnoon-image-transform/drnoon_image_transform/: __init__.py
utils/drnoon-image-transform/drnoon_image_transform/augmentation/: __init__.py  base.py  kornia.py
utils/drnoon-image-transform/drnoon_image_transform/dicom_converter/: __init__.py  base.py
utils/drnoon-image-transform/drnoon_image_transform/transform/: __init__.py  base.py
utils/drnoon-image-transform/drnoon_image_transform/tta/: __init__.py  base.py
utils/drnoon-image-transform/drnoon_image_transform/utils/: __init__.py  constants.py  custom_albumentations.py  custom_kornia_augmentations.py  improc.py  predefined_params.py  types.py
utils/drnoon-image-transform/requirements/: base.txt  kornia.txt
utils/drnoon-image-transform/tests/: conftest.py  helpers.py  torch_helpers.py
utils/drnoon-image-transform/tests/fixtures/convert_dicom/: pylibjpeg_dcmtest.dcm
utils/drnoon-image-transform/tests/integration/: test_augmentation.py  test_dicom_converter.py  test_kornia_augmentation.py  test_transform.py  test_tta.py
utils/drnoon-image-transform/tests/unit/utils/: test_custom_albumentations.py  test_custom_kornia.py  test_types.py
(+91 files in other folders)
