[metadata]
name = drnoon-image-transform
url = https://github.com/medi-whale/drnoon-image-transform
description = A General-Purpose Library for Image Transformations in DrNoon Components
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.7
